--- a/src/main/resources/assets/miximod/lang/en_us.lang
+++ b/src/main/resources/assets/miximod/lang/en_us.lang
@@ -1,6 +1,6 @@
 item.mitenerod.name=Mitene Rod
 itemGroup.mitenerod=Mixi Mod
-item.mixiblock.name=Mixi Block
 tile.mixiblock.name=Mixi Block
+tile.kotlinblock.name=Kotlin Block
 
 
